[project]
name = "apets"
version = "0"
authors = [{ name="Kevin Godin-Dubois", email="k.j.m.godin-dubois@vu.nl"}]
description = "Testbed for revolve-powered RL-trained agents"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  
  "Programming Language :: Python :: 3 :: Only",

  "License :: OSI Approved :: MIT License",

  "Operating System :: Unix",

  "Intended Audience :: Science/Research", 
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Artificial Life",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/kgd-al/apets"

[project.scripts]

[build-system]
requires = [
  "setuptools>=65.0",
  "setuptools_scm[toml]",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
